--- a/public/index.html
+++ b/public/index.html
@@ -5,70 +5,57 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Влизане с WalletConnect / MetaMask</title>
   <style>
-    body { font-family: system-ui, sans-serif; margin: 2rem; }
-    #qr img { max-width: 100%; height: auto; }
-    button { padding: .7rem 1.1rem; font-size: 1rem; }
-    .row { margin: .75rem 0; }
-    code { background:#f3f3f3; padding:.2rem .4rem; border-radius:4px; }
+    :root { --bg:#0b0d10; --panel:#14171b; --text:#e6e9ee; --muted:#a7b0bd; --accent:#4da3ff; --border:#22262c; }
+    *{box-sizing:border-box}
+    body{margin:0;padding:24px;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
+    .wrap{max-width:720px;margin:0 auto}
+    h1{margin:0 0 12px}
+    p.muted{color:var(--muted);margin-top:0}
+    .card{background:var(--panel);border:1px solid var(--border);border-radius:16px;padding:16px;box-shadow:0 6px 24px rgba(0,0,0,.25)}
+    button{background:var(--accent);color:#03111f;border:0;border-radius:10px;padding:10px 14px;font-weight:600;cursor:pointer}
+    button:hover{filter:brightness(1.05)}
+    .row{margin:12px 0}
+    #qr img{width:260px;height:260px;border-radius:12px;display:block}
+    code{background:#0f1318;border:1px solid #1c2128;color:#d7e3ff;padding:.2rem .4rem;border-radius:6px}
+    .error{color:#ff8787}
   </style>
 </head>
 <body>
-  <h1>Влизане с WalletConnect / MetaMask</h1>
-  <p>1) Натисни бутона, 2) сканирай QR с <b>вградения</b> скенер в MetaMask (иконката горе вдясно).</p>
-
-  <div class="row"><button id="btn">Генерирай QR</button></div>
-  <div id="qr" class="row"></div>
-  <div id="status" class="row"></div>
-  <div id="result" class="row"></div>
-
+  <div class="wrap">
+    <h1>Влизане с WalletConnect / MetaMask</h1>
+    <p class="muted">1) Натисни бутона. 2) Сканирай QR с <b>вградения</b> скенер в MetaMask (иконата горе вдясно).</p>
+    <div class="card">
+      <div class="row"><button id="btn">Генерирай QR</button></div>
+      <div id="qr" class="row"></div>
+      <div id="status" class="row"></div>
+      <div id="result" class="row"></div>
+    </div>
+  </div>
   <script>
-    const btn = document.getElementById("btn");
-    const qrDiv = document.getElementById("qr");
-    const statusEl = document.getElementById("status");
-    const resultEl = document.getElementById("result");
+    const btn=document.getElementById("btn"),qrDiv=document.getElementById("qr"),statusEl=document.getElementById("status"),resultEl=document.getElementById("result");
+    const base=""; // сервира се от същия домейн
+    let poll=null; const stop=()=>{ if(poll){clearInterval(poll); poll=null;} };
 
-    // ако фронтендът се сервира от друг домейн, смени base със бекенд URL-a
-    const base = ""; // празно = същият хост (Render бекенда)
+    btn.addEventListener("click", async ()=>{
+      stop(); qrDiv.innerHTML=""; statusEl.textContent="Създаване на сесия..."; statusEl.className=""; resultEl.textContent="";
+      try{
+        const r=await fetch(base+"/wc-uri");
+        if(!r.ok){ const t=await r.text().catch(()=> ""); statusEl.innerHTML=`<span class="error">Грешка при /wc-uri</span>`; if(t) resultEl.innerHTML=`<code>${t.slice(0,400)}</code>`; return; }
+        const {id,uri,expiresAt}=await r.json();
+        const bg="14171b", fg="ffffff";
+        const img=`https://api.qrserver.com/v1/create-qr-code/?size=400x400&bgcolor=${bg}&color=${fg}&data=${encodeURIComponent(uri)}`;
+        qrDiv.innerHTML=`<img src="${img}" alt="WalletConnect QR">`;
+        statusEl.innerHTML=`Статус: <b>pending</b> (валиден до <code>${expiresAt}</code>)`;
 
-    let poll = null;
-    function stopPoll(){ if (poll) { clearInterval(poll); poll = null; } }
-
-    btn.addEventListener("click", async () => {
-      stopPoll();
-      qrDiv.innerHTML = ""; statusEl.textContent = "Създаване на сесия..."; resultEl.textContent = "";
-
-      const r = await fetch(base + "/wc-uri");
-      if (!r.ok) { statusEl.textContent = "Грешка при /wc-uri"; return; }
-      const { id, uri, expiresAt } = await r.json();
-
-      // ВАЖНО: URL-кодирай целия WalletConnect URI!
-      const imgSrc = "https://api.qrserver.com/v1/create-qr-code/?size=400x400&data=" + encodeURIComponent(uri);
-      qrDiv.innerHTML = `<img src="${imgSrc}" alt="WalletConnect QR">`;
-      statusEl.innerHTML = `Статус: <b>pending</b> (валиден до <code>${expiresAt}</code>)`;
-
-      // Poll за статус
-      poll = setInterval(async () => {
-        const s = await fetch(base + `/wc-status?id=${encodeURIComponent(id)}`).then(x => x.json());
-        if (s.status === "approved") {
-          stopPoll();
-          statusEl.innerHTML = `Статус: <b>approved</b>`;
-          resultEl.innerHTML = `
-            <div>Topic: <code>${s.topic}</code></div>
-            <div>Address: <code>${s.address}</code></div>
-            <div>All addresses: <code>${(s.addresses||[]).join(", ")}</code></div>
-            <div>ChainId: <code>${s.chainId}</code></div>
-            <div>Chains: <code>${(s.chains||[]).join(", ")}</code></div>
-          `;
-        } else if (s.status === "expired") {
-          stopPoll();
-          statusEl.innerHTML = `Статус: <b>expired</b> — генерирай нов QR.`;
-        } else if (s.status === "not_found") {
-          stopPoll();
-          statusEl.innerHTML = `Статус: <b>not_found</b>`;
-        } else {
-          statusEl.innerHTML = `Статус: <b>pending</b> — одобри в MetaMask`;
-        }
-      }, 2000);
+        poll=setInterval(async ()=>{
+          const s=await fetch(base+`/wc-status?id=${encodeURIComponent(id)}`).then(x=>x.json());
+          if(s.status==="approved"){ stop(); statusEl.innerHTML=`Статус: <b>approved</b>`;
+            resultEl.innerHTML=`<div>Topic: <code>${s.topic}</code></div><div>Address: <code>${s.address}</code></div><div>All: <code>${(s.addresses||[]).join(", ")}</code></div><div>ChainId: <code>${s.chainId}</code></div>`; }
+          else if(s.status==="expired"){ stop(); statusEl.innerHTML=`Статус: <b>expired</b> — генерирай нов QR.`; }
+          else if(s.status==="not_found"){ stop(); statusEl.innerHTML=`<span class="error">Статус: not_found</span>`; }
+          else { statusEl.innerHTML=`Статус: <b>pending</b> — одобри в MetaMask`; }
+        }, 2000);
+      }catch(e){ statusEl.innerHTML=`<span class="error">Грешка при /wc-uri</span>`; resultEl.textContent=String(e); }
     });
   </script>
 </body>
